work/kuber_2.3/src/deployment_https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-deployment
  namespace: kuber-23
  labels:
    app: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
        volumeMounts:
          - name: nginx-index-file
            mountPath: /usr/share/nginx/html/

      volumes:
        - name: nginx-index-file
          configMap:
            name: configmap-nginx-multitool
