work/kuber_2.3/src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-service
  namespace: kuber-23
spec:
  type: NodePort
  ports:
    - name: http-nginx
      port:  80
      nodePort: 32000
      protocol: TCP
      targetPort: 80
    - name: http-app-mult
      port:  8080
      nodePort: 32001
      protocol: TCP
      targetPort: 8080
  selector:
    app: main
