work/kuber_2.3/src/ingress_https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-https
  namespace: kuber-23
spec:
  rules:
    - host: my-kuber.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-https
                port:
                  number: 80

  tls:
    - hosts:
      - my-kuber.com
      secretName: secret-tls
